# expense-report

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/expense_report/: categorizers.py  cli.py  jobs.py  llm_client.py  models.py  notifier.py  parsers.py  reports.py
src/expense_report/resources/: categories.json
tests/: test_jobs.py  test_llm_client.py  test_monthly_flow.py  test_report_filtering.py  test_reports.py  test_rules.py
tests/resources/: amex.csv  categorized_2024-11.csv  categorized_2024-12.csv  transactions_2024-12.csv  transactions_2025-01.csv
