[project]
name = "expense-report"
version = "0.1.0"
description = "Analyze and categorize monthly expenses"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fpdf2>=2.8.5",
    "kaleido>=1.2.0",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
expense-report = "expense_report.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expense_report"]
